--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ cycler==0.11.0
 debugpy==1.5.1
 decorator==5.1.0
 Django==3.2.9
+django-cors-headers==3.11.0
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.0.0
 entrypoints==0.3
